force-app/main/default/objects/ssot__PrivacyConsentLog__dlm/fields/ssot__ConsentTriggeringEventTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConsentTriggeringEventTypeId__c</fullName>
    <label>Consent Triggering Event Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConsentTriggeringEventTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>