force-app/main/default/objects/ssot__PrivacyConsentLog__dlm/fields/ssot__DeviceLat__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeviceLat__c</fullName>
    <label>Device Latitude</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeviceLat</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>