force-app/main/default/objects/ssot__PrivacyConsentLog__dlm/fields/ssot__DeviceLgtd__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeviceLgtd__c</fullName>
    <label>Device Longitude</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeviceLgtd</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>