force-app/main/default/objects/ssot__PrivacyConsentLog__dlm/fields/ssot__PrivacyConsentActivityDttm__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrivacyConsentActivityDttm__c</fullName>
    <label>Privacy Consent Activity Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrivacyConsentActivityDttm</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>