force-app/main/default/objects/ssot__PrivacyConsentLog__dlm/fields/ssot__PrivacyConsentLogCategoryId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrivacyConsentLogCategoryId__c</fullName>
    <label>Privacy Consent Log Category</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrivacyConsentLogCategoryId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>