force-app/main/default/objects/ssot__PrivacyConsentLog__dlm/fields/ssot__rel_1697761161805_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761161805_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactPointEmail_Id_map_PrivacyCons_rel</label>
    <referenceTo>ssot__ContactPointEmail__dlm</referenceTo>
    <relationshipLabel>ContactPointEmail_Id_map_PrivacyCons_rel</relationshipLabel>
    <relationshipName>rel_1697761161805_end</relationshipName>
    <type>Lookup</type>
</CustomField>