force-app/main/default/objects/ssot__PrivacyConsentLog__dlm/fields/ssot__rel_1697761164614_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761164614_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactPointSocial_Id_map_PrivacyCon_rel</label>
    <referenceTo>ssot__ContactPointSocial__dlm</referenceTo>
    <relationshipLabel>ContactPointSocial_Id_map_PrivacyCon_rel</relationshipLabel>
    <relationshipName>rel_1697761164614_end</relationshipName>
    <type>Lookup</type>
</CustomField>