force-app/main/default/objects/ssot__PrivacyConsentLog__dlm/fields/ssot__rel_1697761192187_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761192187_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PrivacyConsentLog_ContactPointId_map_rel</label>
    <referenceTo>ssot__ContactPointEmail__dlm</referenceTo>
    <relationshipLabel>PrivacyConsentLog_ContactPointId_map_rel</relationshipLabel>
    <relationshipName>rel_1697761192187_end</relationshipName>
    <type>Lookup</type>
</CustomField>